k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sblog-svc
  namespace: sblog
spec:
  selector:
    app: sblog-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
